# Postit

./: .gitignore  Cargo.toml  todo.markdown
src/: commands.rs  doc.rs  lib.rs  main.rs  page.rs  partial.rs  post.rs
src/traits/: sheet.rs
test/assets/example_src/: layout.handlebars
test/assets/example_src/layouts/: default.handlebars
test/assets/example_src/pages/: home.handlebars
test/assets/example_src/partials/: navigation.html
test/assets/example_src/posts/: test.markdown
test/assets/pages/: partial.handlebars  posts.handlebars
test/assets/posts/: post.markdown  simple.markdown
