[package]
name = "postit"
version = "0.1.0"
authors = ["Joshua Harris <joshuaweharris@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.6.2"
frontmatter = "0.3.0"
handlebars = "2.0.1"
serde_json = "1.0.40"